# WASA-analysis

./: .gitignore  .gitmodules  CMakeLists.txt  MCHe3Eta.sh  Makefile  README.md  analysis.cc  analysis.cpp  analysis.h  analysisjob.cc  analysisjob.hh  analysiswrap.cc  analysiswrap.hh  autoconf.sh  buildme.sh  config.h  detectors.cc  detectors.h  he3eta.cc  kinematics.h  libs.pri  luminosity_he3eta.cpp  luminosity_he3eta_eventcount.cpp  luminosity_he3eta_fit.cpp  luminosity_he3eta_forward.cpp  main.cc  phys_constants.h  pluto.cpp  plutto_oth.cpp  reactions.h  reconstruction.cpp  reconstruction_he3.cpp  reconstruction_types.h  wrap.cpp
AnalyseBase/: CMakeLists.txt  analysis.h  analysis.pro  analysis_templates.h  analysisjob.cpp  analysisjob.h  main.cpp  routines.cpp  routines.h  wrap.cpp  wrap.h
Analysis/: CMakeLists.txt  calibrate_he3.cpp  calibrate_he3eta.cpp  fit_hist2hist.cpp  fit_hist2hist.h  gethist.cpp  gethist.h  luminosity_he3eta.cpp  read_simulation.cpp  read_simulation.h  reconstruct_he3.cpp  runs.cc  smallcalc.cpp
Analysis_test/: Analysis_test.pro  LinkDef.hh  Makefile  analysisjob.cc  analysisjob.hh  run_queue.sh
AnalyzeMC/: .sorterrc  Makefile  analysisjob.cc  analysisjob.hh  main.cc  run_here.sh  run_queue.sh
DataAnalyse/: .sorterrc  LinkDef.hh  Makefile  analysis.cc  analysis.h  analysiswrap.cc  analysiswrap.hh  config.h  data.cc  data.h  detectors.cc  detectors.h  he3eta.cc  he3eta.h  log.cc  log.h  main.cc  math_h  montecarlo.cc  montecarlo.h  reconstruction.cc  reconstruction.h
DataAnalyse-scripts/: DataHe3Eta.sh  He3Eta.sh  He3Eta_wmc.sh  MCHe3Eta.sh  RunAnalysis-mc-only.sh  RunAnalysis.sh  RunPreanalysis-mc-only.sh  RunReaction.sh  RunWMC.sh  analyse_mc.sh  analyse_runs.sh  rootlogon.C
DataAnalyse-scripts/WMC/: wmc.dat.m4  wmc.sh
DataAnalyse-scripts/config/: FDEdep2Ekin_3He  al4cosy0_mc_009.dat042.m4  config.sh
DataAnalyse-scripts/config/Calibration/: CalibCardFDScint_FRHdefault_44961_46884  CalibCardFDScint_FRHdefault_44961_46884_e_elemental  SECalibCard_default_44961_46884_e_factor  SECalibCard_default_44961_46884_e_lpconf  SECalibCard_default_44961_46884_e_lpnorm
DataAnalyse-scripts/config/Reconstruction/: add_reconstruction_table.sh
DataAnalyse-scripts/config/WMC_Geometry/: al4cosy0_mc_009.dat042.m4  al4cosy0_mc_010.dat042.m4  apply_geometry.sh  (+1 more)
DataFiles/: He3.E.FRH1.calibration.txt  He3.E.FRH1.fit.txt  He3.E.FRH1.params.txt  He3.E.FRH2.calibration.txt  He3.E.FRH2.fit.txt  He3.E.FRH2.params.txt  He3.E.FTH1.calibration.txt  He3.E.FTH1.params.txt  He3.phi.calibration.txt  He3.phi.params.txt  He3.th.calibration.txt  He3.th.params.txt
Gammas/: CMakeLists.txt  bound-weighted-average.cpp  central-2g-old.cpp  central-2g-part2.cpp  central-2g.cpp  central-6g-only.cpp  central-6g.cpp  upper-limit-syst-table.cpp  upper-limit.cpp  upper-limit2.cpp
General/: phys_constants.h  replace.cc
He3Eta/: CMakeLists.txt  beam_momenta_offset.cpp  central-2g.cpp  central-6g.cpp  central.cpp  forward.cpp  forward2.cpp  forward_cuts.cpp  he3eta.cpp  he3eta.h  he3eta.txt  luminosity.cpp  reactions.cpp  reconstruction.cpp
InputDataConvert/: CMakeLists.txt  he3eta.cpp  pd.cpp
InputDataConvert/bound/: he3eta-pf-75-20.txt  he3eta-pf-80-20.txt  he3eta-pf-90-20.txt
InputDataConvert/pd/: pb1271.txt  pb1455.txt  pb1459.txt  pb1463.txt  pb1569.txt  pb1686.txt
PostAnalysis/: CMakeLists.txt  calibrate_he3eta.cpp  env.cc  gethist.cpp  gethist.h  gnuplot.cpp  gnuplot.h  posthe3eta.cpp  smallcalc.cpp  tblparamfunc.cpp  tblparamfunc.h  test.cpp
Preselection/: LinkDef.hh  Makefile  abstractanalysis.cc  abstractanalysis.hh  analysis.cc  analysis.h  analysismodule.cc  analysismodule.hh  analysiswrap.cc  analysiswrap.hh  config.h  data.cc  data.h  detectors.cc  detectors.h  experiment_conv.h  geometry.h  he3.cc  he3.h  he3.hh  he3_forward.cc  he3eta.cc  he3eta.h  log.cc  log.h  main.cc  montecarlo.cc  montecarlo.h  reactions.h  reconstruction.cc  reconstruction.h  reconstruction_types.h  reconstructionmodule.cc  reconstructionmodule.hh  theory.cc  theory.h  trackprocessing.cc  trackprocessing.h
Preselection/Genetic/: paramfunc.h  paramset.cc  paramset.h
Preselection/Theory/: he3.cc  he3.h  particles.cc  particles.h  reactions.cc  reactions.h
Reconstruction/: CMakeLists.txt  FitGen  He3.E.FRH1.calibration.txt  He3.E.FRH2.calibration.txt  He3.E.FTH1.calibration.txt  He3.E.FTH1nFRH1.calibration.txt  He3.E.calibration.txt  He3.phi.calibration.txt  He3.th.calibration.txt  fitpolynom.cpp  he3eta.parameters.txt
RunMonteCarlo/: CMakeLists.txt  RunMonteCarlo.cpp
RunPluto/: CMakeLists.txt  allrange.cpp  he3_production.cpp  he3eta.cpp  math_h  outpath.cc  overthreshold.cpp  runmc.cpp
lib/Integration/: CMakeLists.txt  experiment_conv.h  gethist.cpp  gethist.h  plotstream.cpp  plotstream.h  str_get.cpp  str_get.h
lib/Reaction/: CMakeLists.txt  he3.cpp  he3.h  histfit.cpp  histfit.h  luminosity.cpp  p2Q.cpp  particles.cpp  particles.h  reactions.cpp  reactions.h  theory.cpp  theory.h
lib/Reconstruction/: CMakeLists.txt  read_simulation.cpp  read_simulation.h  reconstruct.cpp  reconstruct.h  reconstruction_fit.cpp  reconstruction_fit.h
ppn/: CMakeLists.txt  luminosity.cpp  luminosity2.cpp  ppn_spectra.cpp
ppn/crosssections/: Theta_0.txt  Theta_1.txt  Theta_10.txt  Theta_100.txt  Theta_101.txt  Theta_102.txt  Theta_103.txt  Theta_104.txt  Theta_105.txt  Theta_106.txt  Theta_107.txt  Theta_108.txt  Theta_109.txt  Theta_11.txt  Theta_110.txt  Theta_111.txt  Theta_112.txt  Theta_113.txt  Theta_114.txt  Theta_115.txt  Theta_116.txt  Theta_117.txt  Theta_118.txt  Theta_119.txt  Theta_12.txt  Theta_120.txt  Theta_121.txt  Theta_122.txt  Theta_123.txt  Theta_124.txt  Theta_125.txt  Theta_126.txt  Theta_127.txt  Theta_128.txt  Theta_129.txt  Theta_13.txt  Theta_130.txt  Theta_131.txt  Theta_132.txt  Theta_133.txt  (+141 more)
tests/: CMakeLists.txt  hist.cpp
wasa-scripts/: RunAnalysis-data.sh  RunAnalysis-mc-view.sh  RunAnalysis-mc.sh  RunAnalysis.sh  RunPreanalysis-mc-only.sh  RunReconstructionSimulation.sh
wasa-scripts/WMC/: wmc.dat.m4
wasa-scripts/config/: config.sh
(+7 files in other folders)
