cmake_minimum_required(VERSION 3.0)
project(WASAatCOSY_etamesic_3He_search_analysis)
set(CMAKE_CXX_FLAGS "-std=gnu++11")
add_subdirectory(WASA-libs)
include_directories(${WASA_LIBS_INC})
add_executable(reconstruction reconstruction.cpp)
target_link_libraries(reconstruction ${ROOT_LIBRARIES} reconstructionfit experiment kinematics)
add_subdirectory(He3Eta)
add_subdirectory(Gammas)
add_subdirectory(ppn)
