cmake_minimum_required(VERSION 2.6)
project(Analysis)
set(WASACORE $ENV{ROOTSORTERSYS}/core)
set(ROOT $ENV{ROOTSYS})
set(CMAKE_CPP_FLAGS -g)
set(CMAKE_CXX_FLAGS "-fno-strict-aliasing  -g -std=c++11")
link_directories($(WASACORE)/lib $(ROOT)/lib)
include_directories($(WASACORE)/include $(ROOT)/include)
add_executable(run_analysejob main.cpp analysisjob.cpp)
target_link_libraries(analyse WasaRecFD WasaRecSE WasaRecPS WasaRecMDC WasaRecCD WasaParameter WasaAnaRaw WasaRecFPC vt)
