add_executable(central-2g central-2g.cpp)
target_link_libraries(central-2g ${ROOT_LIBRARIES} experiment kinematics FitGen parameters)
add_executable(central-6g central-6g.cpp)
target_link_libraries(central-6g ${ROOT_LIBRARIES} experiment kinematics FitGen parameters)
add_executable(upper-limit upper-limit.cpp)
target_link_libraries(upper-limit ${ROOT_LIBRARIES} experiment kinematics FitGen parameters)
add_executable(upper-limit-syst-table upper-limit-syst-table.cpp)
target_link_libraries(upper-limit-syst-table ${ROOT_LIBRARIES} experiment kinematics FitGen parameters)
add_executable(upper-limit2 upper-limit2.cpp)
target_link_libraries(upper-limit2 ${ROOT_LIBRARIES} experiment kinematics FitGen parameters)
