cmake_minimum_required(VERSION 2.6)
project(runfit)
add_definitions(-DUSE_RANDOM_DEVICE)
set(libs FitGen Core Hist RIO Tree)
set(common gethist.cpp gnuplot.cpp tblparamfunc.cpp)
add_subdirectory(FitGen)
include_directories(FitGen $ENV{ROOTSYS}/include ../General)
link_directories($ENV{ROOTSYS}/lib)
set(CMAKE_CXX_FLAGS "-pthread -std=gnu++11")
add_executable(postanalyse_he3eta posthe3eta.cpp ${common})
target_link_libraries(postanalyse_he3eta ${libs})