cmake_minimum_required(VERSION 2.6)
project(runfit)
set(libs FitGen Core Hist RIO Tree Physics)
set(common gethist.cpp)
add_subdirectory(FitGen)
include_directories(FitGen $ENV{ROOTSYS}/include ../General)
link_directories($ENV{ROOTSYS}/lib)
set(CMAKE_CXX_FLAGS "-pthread -std=gnu++11")
add_executable(smallcalc smallcalc.cpp ${common})
target_link_libraries(smallcalc ${libs})
add_executable(postanalyse_he3eta posthe3eta.cpp ${common})
target_link_libraries(postanalyse_he3eta ${libs})
